--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.19",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
+    "axios": "^1.3.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
